<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Serenity</string>
    <string name="login">Login</string>
    <string name="serenity">SERENITY</string>
    <string name="username">Email</string>
    <string name="password">Password</string>
    <string name="loginButton">login</string>
    <string name="create_account">Create Account</string>
    <string name="attempts_left">Attempts Left:</string>
    <string name="create_accountlogo">Create account</string>
    <string name="email">Email</string>
    <string name="enter_password">Enter password</string>
    <string name="re_enter_password">Re-enter password</string>
    <string name="user">Username</string>
    <string name="create">Create</string>
    <string name="title_activity_calender">Calender</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="calenderIcon">Calender</string>
    <string name="to_do_list">To-Do List</string>
    <string name="settings">Settings</string>

    <string name="MODEL">list</string>
    <string name="position">position</string>
    <string name="tasks">Tasks</string>
    <string name="task">Task</string>
    <string name="description">Description</string>
    <string name="add">ADD</string>
    <string name="delete">DELETE</string>
    <string name="begin">BEGIN</string>

    <string name="save">Save</string>
    <string name="close">Close</string>
    <string name="example_3_input_dialog_title">Enter event title</string>
    <string name="example_3_empty_input_text">Text is empty</string>
    <string name="example_3_dialog_delete_confirmation">Delete this event?</string>
    <string name="double_dots" translatable="false">:</string>
    <string name="cancel">Cancel</string>
    <string name="set">set</string>
    <string name="no_events">no events</string>
    <string name="event_default_title">My event</string>
    <string name="title">Title</string>
    <string name="completed">Completed</string>
    <string name="new_event">New Event</string>
    <string name="ok">ok</string>
    <string name="today">today</string>
    <string name="select_color_instruction">Select color of event</string>

    <string name="lock">LOCK</string>
    <string name="unlock">UNLOCK</string>
    <string name="giveup">Let\'s try to be disciplined.</string>
    <string name="startedtimer">Let\'s be productive!</string>
    <string name="end">Well done! Time for a well-deserved break.</string>
    <string name="s_e_r_e_n_i_t_y">S E R E N I T Y</string>
    <string name="don_t_have_an_account_sign_up_here">Don\'t have an account? Sign up here!</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="edit">edit</string>
    <string name="name">Name</string>
    <string name="emailInSettings">Email</string>
    <string name="editAccount">Edit account</string>
    <string name="resetPassword">Reset password</string>
    <string name="deleteAccount">Delete account</string>
    <string name="signOut">Sign out</string>
    <string name="confirmation">Confirmation</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="new_email">New Email</string>
    <string name="new_username">New Username</string>
    <string name="confirm">Confirm</string>
    <string name="set_profile_picture">Set profile picture</string>
    <string name="s_e_t_t_i_n_g_s">SETTINGS</string>
    <string name="set_duration">SET DURATION</string>
    <string name="back">BACK</string>
    <string name="input_time_in_minutes">Input Time In Minutes</string>


</resources>
