<?xml version = "1.0" encoding = "utf-8"?>
<RelativeLayout xmlns:android = "http://schemas.android.com/apk/res/android"
    xmlns:tools = "http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height = "match_parent"
    tools:context=".CreateAccount">

    <TextView
        android:id="@+id/CreateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_accountlogo"
        android:textSize="25sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        />

    <EditText
        android:id="@+id/email"
        android:layout_width="383dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/CreateText"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingLeft="20dp"
        android:textColorHint="#0C79AA"
        android:autofillHints=""
        android:layout_marginStart="15dp"
        android:paddingStart="20dp" />

    <EditText
        android:id="@+id/createPassword"
        android:layout_width="383dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:textColorHint="#0C79AA"
        android:layout_marginStart="15dp"
        android:paddingStart="20dp" />

    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="383dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/createPassword"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:hint="@string/re_enter_password"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:textColorHint="#0C79AA"
        android:layout_marginStart="15dp"
        android:paddingStart="20dp" />

    <Button
        android:id="@+id/Create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/confirmPassword"
        android:layout_marginLeft="300dp"
        android:layout_marginTop="35dp"
        android:text="@string/create"
        android:layout_marginStart="300dp" />

</RelativeLayout>
