<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/settings_background"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_title"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="55dp"
            android:fontFamily="@font/pt_serif_caption"
            android:text="@string/s_e_t_t_i_n_g_s"
            android:textSize="60sp" />
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:orientation="horizontal"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:paddingBottom="14dp">


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/profile_pic"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/user"
                android:clickable="true"
                android:contentDescription="@string/set_profile_picture"
                android:focusable="true"
                tools:ignore="VectorDrawableCompat" />

            <TextView
                android:id="@+id/edit_pic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/profile_pic"
                android:layout_centerHorizontal="true"
                android:layout_marginHorizontal="48dp"
                android:fontFamily="@font/roboto_light"
                android:text="@string/edit"
                android:textColor="@color/black"
                android:textSize="15sp" />


        </RelativeLayout>

        <Space
            android:layout_width="25dp"
            android:layout_height="0dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_light"
                    android:text="@string/name"
                    android:textColor="@color/black"
                    android:textSize="28sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_light"
                    android:text="@string/emailInSettings"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

    <Space
        android:layout_width="25dp"
        android:layout_height="10dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white" />

    <Space
        android:layout_width="25dp"
        android:layout_height="10dp" />


    <TextView
        android:id="@+id/editAccount"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginHorizontal="80dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/roboto_light"
        android:paddingTop="5dp"
        android:text="@string/editAccount"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <Space
        android:layout_width="25dp"
        android:layout_height="10dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white" />

    <Space
        android:layout_width="25dp"
        android:layout_height="10dp" />


    <TextView
        android:id="@+id/Reset_Password"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginHorizontal="80dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/roboto_light"
        android:paddingTop="5dp"
        android:text="@string/resetPassword"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <Space
        android:layout_width="25dp"
        android:layout_height="10dp" />


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white" />

    <Space
        android:layout_width="25dp"
        android:layout_height="10dp" />

    <TextView
        android:id="@+id/DeleteAccount"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginHorizontal="80dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/roboto_light"
        android:paddingTop="5dp"
        android:text="@string/deleteAccount"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <Space
        android:layout_width="25dp"
        android:layout_height="10dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white" />

    <Space
        android:layout_width="25dp"
        android:layout_height="10dp" />


    <TextView
        android:id="@+id/signOut"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginHorizontal="80dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/roboto_light"
        android:paddingTop="5dp"
        android:text="@string/signOut"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <Space
        android:layout_width="25dp"
        android:layout_height="10dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white" />

</LinearLayout>
