<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp" >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="14dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <EditText
                android:id="@+id/checkingPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Enter Password"
                android:layout_centerHorizontal="true"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:visibility="visible"
                android:layout_above="@+id/AccConfirm" />

            <EditText
                android:id="@+id/newUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/new_username"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:layout_centerHorizontal="true"
                android:inputType="text|textNoSuggestions"
                android:importantForAutofill="no"
                android:visibility="visible"/>

            <EditText
                android:id="@+id/newEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/new_email"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:layout_below="@+id/newUserName"
                android:layout_centerHorizontal="true"
                android:inputType="textEmailAddress"
                android:autofillHints=""
                android:visibility="visible"/>

            <Button
                android:id="@+id/AccConfirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm"
                android:layout_below="@+id/newEmail"
                android:layout_marginRight="50dp"
                android:layout_marginTop="25dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="50dp" />

            <Button
                android:id="@+id/AccCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:layout_below="@+id/newEmail"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="25dp"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="50dp"
                android:layout_alignParentStart="true" />



        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>